# fullstack-fastapi-tutorial

./: README.md
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  settings.py
backend/app/: main.py  models.py  settings.py
backend/app/routes/: ping_route.py  todo_route.py
backend/http/: ping.http  test.http  todos.http
frontend/: README.md  orval.config.ts  package-lock.json  package.json
frontend/src/lib/: toast.svelte.ts
frontend/src/lib/components/: Toaster.svelte  TodoItem.svelte  TodosSkeleton.svelte
frontend/src/routes/: +page.svelte  +page.ts
